--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "filepreview",
-  "version": "1.0.14",
+  "version": "1.0.14-custom-build",
   "description": "A file preview generator for node.js",
   "main": "filepreview.js",
   "scripts": {
